--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "homepage": "https://github.com/jonalake/pokemon-library-ts#readme",
   "dependencies": {
     "esm": "^3.2.25",
+    "jest-environment-jsdom": "^28.0.2",
     "lodash": "^4.17.21",
+    "parcel": "^2.5.0",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.0",
     "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.14.0",
-    "jest": "^28.0.3"
+    "jest": "^28.0.3",
+    "ts-jest": "^28.0.1"
   }
 }
